Update from bu Rahma

--- a/2016-08/rapid-earthquake-magnitude-estimation-gps/rapid-earthquake-magnitude-estimation-gps.ipynb
+++ b/2016-08/rapid-earthquake-magnitude-estimation-gps/rapid-earthquake-magnitude-estimation-gps.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Catatan Kuliah Umum Rapid Earthquake Magnitude Estimation Using Near Realtime GPS Data\n",
     "\n",
-    "oleh Hendy Irawan (http://orcid.org/0000-0002-5231-2802) - 9 Agustus 201\n",
+    "oleh Hendy Irawan (http://orcid.org/0000-0002-5231-2802) - 9 Agustus 2016\n",
+    "\n",
+    "Source: https://github.com/lskk/emergency-work\n",
+    "\n",
+    "Published at: https://figshare.com/account/projects/15261/articles/3549624\n",
     "\n",
     "Kuliah Umum Rapid Earthquake Magnitude Estimation Using Near Realtime GPS Data Prof. Yusaku Ohta Associate Professor Crustal Physics Laboratory, Research Center for Prediction of Earthquakes and Volcanic Eruptions Tohoku University\n",
     "\n",
@@ -15,7 +19,7 @@
     "Live at:\n",
     "http://media.bmkg.go.id/Live.bmkg?ID=2625949045519124\n",
     " \n",
-    "www.bmkg.go.id\n",
+    "http://www.bmkg.go.id\n",
     "\n",
     "Via Dr. Rahma Hanifa, Dr. Abdul Muhari, Himpunan Mahasiswa Oseanografi ITB, Carmadi Machbub, Ary Setijadi Prihatmanto, Egi Hidayat, Astri Novianty, Irwan Meilano, Irina Rafliana\n",
     "\n",
@@ -39,9 +43,15 @@
    "source": [
     "## Relevansi dengan LSKK\n",
     "\n",
-    "Hipotesis sementara yang relevan dengan LSKK, adalah bila Semut/ACT banyak penggunanya (terutama terkumpul di satu area), maka data GPS mereka (yang realtime) berpotensi untuk dimasukkan ke algoritma RAPiD ini untuk menghitung magnitude gempa tanpa seismograf, bahkan lebih akurat dari seismograf\n",
+    "<del>Hipotesis sementara yang relevan dengan LSKK, adalah bila Semut/ACT banyak penggunanya (terutama terkumpul di satu area), maka data GPS mereka (yang realtime) berpotensi untuk dimasukkan ke algoritma RAPiD ini untuk menghitung magnitude gempa tanpa seismograf, bahkan lebih akurat dari seismograf</del>\n",
     "\n",
-    "Namun saya belum jelas saat konfirmasi apakah hal tersebut mungkin dilakukan (deteksi murni berbasis smartphone, tanpa geostation, tanpa seismograf). :("
+    "<del>Namun saya belum jelas saat konfirmasi apakah hal tersebut mungkin dilakukan (deteksi murni berbasis smartphone, tanpa geostation, tanpa seismograf). :(</del>\n",
+    "\n",
+    "Saya telah dijelaskan oleh Pak Endra (GREAT ITB) bahwa GPS yang digunakan harus geodetik, jadi akurasinya 1-10mm .. tidak bisa pakai GPS smartphone. :( Nah, dengan GPS module tersebut, algoritma RAPiD ini untuk menghitung magnitude gempa dengan lebih cepat tanpa seismograf, bahkan lebih akurat dari seismograf.\n",
+    "\n",
+    "Tambahan Bu Rahma: Sistemnya tadi dibuat independent, jadi semuadari GNSS aja, ngga pake data seismik.\n",
+    "\n",
+    "Dari Pak Ary: Kita punya GPS module yang bisa RTK. Memang gak gampang dapetnya dan sedikit mahal (USD 500) jadi bisa saja diteliti menggunakan GPS modul ini."
    ]
   },
   {
@@ -81,6 +91,12 @@
     "![Actual working example of REGARD](Actual working example of REGARD.jpg)\n",
     "\n",
     "Algoritma REGARD dapat memperkirakan single finite fault model dalam waktu 6 menit.\n",
+    "\n",
+    "**Tambahan Bu Rahma:** 6 menit waktu kasus real Gempa Kumamoto 2012 (gempa di darat dg magnitude 7.0).\n",
+    "\n",
+    "Waktu quasi real time simulation dg data gempa Tohoku magnitude 9.0 diperlukan waktu 2 menit sampai hasil stabil.\n",
+    "\n",
+    "Knp kumamoto lbh lama rupanya krn sedimentasi di sana, yg menyebabkan propagasi lebih lama\n",
     "\n",
     "## Application of tFISH to real data\n",
     "\n",
@@ -133,6 +149,41 @@
     "   RAPID is from seismic wave -- can generate coseismic model\n",
     "\n",
     "2. Using GNSS, GLONASS, etc. in geostation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Photos\n",
+    "\n",
+    "### Sambutan dari Pak Riyadi\n",
+    "\n",
+    "![Sambutan Pak Riyadi.jpg](Sambutan Pak Riyadi.jpg)\n",
+    "\n",
+    "### Foto bersama\n",
+    "\n",
+    "![foto bersama.jpg](foto bersama.jpg)\n",
+    "\n",
+    "### Dimoderatori Pak Taufik\n",
+    "\n",
+    "![Dimoderatori Pak Taufik.jpg](Dimoderatori Pak Taufik.jpg)\n",
+    "\n",
+    "### Lecture Prof Ohta\n",
+    "\n",
+    "![Lecture Prof Ohta.jpg](Lecture Prof Ohta.jpg)\n",
+    "\n",
+    "### Sambutan dan pembukaan Kepala BMKG\n",
+    "\n",
+    "![Sambutan dan pembukaan Kepala BMKG.jpg](Sambutan dan pembukaan Kepala BMKG.jpg)\n",
+    "\n",
+    "### Penyerahan cinderamata\n",
+    "\n",
+    "![Penyerahan cinderamata.jpg](Penyerahan cinderamata.jpg)\n",
+    "\n",
+    "### Peserta kuliah umum\n",
+    "\n",
+    "![Peserta kuliah umum.jpg](Peserta kuliah umum.jpg)\n"
    ]
   }
  ],
